Refactor Kosaraju's algorithm implementation for improved style, input validation, and readability