@@ -1,34 +1,57 @@
-// Kosaraju's algorithm to find strongly connected components in Java
 
-import java.util.*;
+/**
+ * Kosaraju's algorithm to find strongly connected components (SCCs).
+ *
+ * This is a small educational implementation; the algorithm and printed
+ * output are preserved and only small style/input-validation improvements
+ * have been applied.
+ */
+
+import java.util.Iterator;
 import java.util.LinkedList;
+import java.util.Stack;
 
 class Graph {
-    private int V;
-    private LinkedList<Integer> adj[];
+    private final int V;
+    private final LinkedList<Integer>[] adj;
 
-    // Create a graph
+    /**
+     * Create a graph with {@code s} vertices (0..s-1).
+     *
+     * @throws IllegalArgumentException if {@code s} is not positive
+     */
+    @SuppressWarnings("unchecked")
     Graph(int s) {
+        if (s <= 0)
+            throw new IllegalArgumentException("number of vertices must be positive");
         V = s;
         adj = new LinkedList[s];
-        for (int i = 0; i < s; ++i)
-            adj[i] = new LinkedList();
+        for (int i = 0; i < s; ++i) {
+            adj[i] = new LinkedList<Integer>();
+        }
     }
 
     // Add edge
     void addEdge(int s, int d) {
+        checkVertex(s);
+        checkVertex(d);
         adj[s].add(d);
+    }
+
+    private void checkVertex(int v) {
+        if (v < 0 || v >= V)
+            throw new IndexOutOfBoundsException("vertex index out of range: " + v);
     }
 
     // DFS
     void DFSUtil(int s, boolean visitedVertices[]) {
+        checkVertex(s);
         visitedVertices[s] = true;
         System.out.print(s + " ");
-        int n;
 
         Iterator<Integer> i = adj[s].iterator();
         while (i.hasNext()) {
-            n = i.next();
+            int n = i.next();
             if (!visitedVertices[n])
                 DFSUtil(n, visitedVertices);
         }
@@ -39,13 +62,16 @@ class Graph {
         Graph g = new Graph(V);
         for (int s = 0; s < V; s++) {
             Iterator<Integer> i = adj[s].listIterator();
-            while (i.hasNext())
-                g.adj[i.next()].add(s);
+            while (i.hasNext()) {
+                int d = i.next();
+                g.adj[d].add(s);
+            }
         }
         return g;
     }
 
-    void fillOrder(int s, boolean visitedVertices[], Stack stack) {
+    void fillOrder(int s, boolean visitedVertices[], Stack<Integer> stack) {
+        checkVertex(s);
         visitedVertices[s] = true;
 
         Iterator<Integer> i = adj[s].iterator();
@@ -54,19 +80,17 @@ class Graph {
             if (!visitedVertices[n])
                 fillOrder(n, visitedVertices, stack);
         }
-        stack.push(new Integer(s));
+        stack.push(Integer.valueOf(s));
     }
 
     // Print strongly connected component
     void printSCC() {
-        Stack stack = new Stack();
+        Stack<Integer> stack = new Stack<>();
 
         boolean visitedVertices[] = new boolean[V];
-        for (int i = 0; i < V; i++)
-            visitedVertices[i] = false;
 
         for (int i = 0; i < V; i++)
-            if (visitedVertices[i] == false)
+            if (!visitedVertices[i])
                 fillOrder(i, visitedVertices, stack);
 
         Graph gr = Transpose();
@@ -74,10 +98,10 @@ class Graph {
         for (int i = 0; i < V; i++)
             visitedVertices[i] = false;
 
-        while (stack.empty() == false) {
-            int s = (int) stack.pop();
+        while (!stack.isEmpty()) {
+            int s = stack.pop().intValue();
 
-            if (visitedVertices[s] == false) {
+            if (!visitedVertices[s]) {
                 gr.DFSUtil(s, visitedVertices);
                 System.out.println();
             }
